clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__991016_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/991016-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn doit(%arg0: s32i, %arg1: s32i, %arg2: void*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: void*):
        %35 = alloca s32i, "sel", align 4
        %36 = alloca s32i, "n", align 4
        %37 = alloca void*, "p", align 8
        %38 = alloca s32i, "__retval", align 4
        %39 = alloca s32i*, "p0", align 8
        %40 = alloca s64i*, "p1", align 8
        %41 = alloca s64i*, "p2", align 8
        store %arg0, %35
        store %arg1, %36
        store %arg2, %37
        %42 = load %37 : void*, align 8
        %43 = cast(bitcast) %42 : s32i*
        store %43, %39, align 8
        %44 = load %37 : void*, align 8
        %45 = cast(bitcast) %44 : s64i*
        store %45, %40, align 8
        %46 = load %37 : void*, align 8
        %47 = cast(bitcast) %46 : s64i*
        store %47, %41, align 8
        scope {
            %49 = load %35 : s32i, align 4
            switch %49 {
                case equal 0 {
                    scope {
                        do {
                            %88 = load %39 : s32i*, align 8
                            %89 = load %88 : s32i, align 4
                            %90 = load %39 : s32i*, align 8
                            %91 = load %90 : s32i, align 4
                            %92 = add %91, %89 : s32i [nsw]
                            store %92, %90, align 4
                            yield
                        } while {
                            %85 = load %36 : s32i, align 4
                            %86 = dec %85 : s32i [nsw]
                            store %86, %36, align 4
                            %87 = cast(int_to_bool) %86 : bool
                            condition %87
                        }
                        yield
                    }
                    %79 = load %39 : s32i*, align 8
                    %80 = load %79 : s32i, align 4
                    %81 = const 0 : s32i
                    %82 = cmp eq %80, %81 : bool
                    %83 = cast(bool_to_int) %82 : s32i
                    store %83, %38
                    %84 = load %38 : s32i
                    return %84
                }
                case equal 1 {
                    scope {
                        do {
                            %74 = load %40 : s64i*, align 8
                            %75 = load %74 : s64i, align 8
                            %76 = load %40 : s64i*, align 8
                            %77 = load %76 : s64i, align 8
                            %78 = add %77, %75 : s64i [nsw]
                            store %78, %76, align 8
                            yield
                        } while {
                            %71 = load %36 : s32i, align 4
                            %72 = dec %71 : s32i [nsw]
                            store %72, %36, align 4
                            %73 = cast(int_to_bool) %72 : bool
                            condition %73
                        }
                        yield
                    }
                    %65 = load %40 : s64i*, align 8
                    %66 = load %65 : s64i, align 8
                    %67 = const 0 : s64i
                    %68 = cmp eq %66, %67 : bool
                    %69 = cast(bool_to_int) %68 : s32i
                    store %69, %38
                    %70 = load %38 : s32i
                    return %70
                }
                case equal 2 {
                    scope {
                        do {
                            %60 = load %41 : s64i*, align 8
                            %61 = load %60 : s64i, align 8
                            %62 = load %41 : s64i*, align 8
                            %63 = load %62 : s64i, align 8
                            %64 = add %63, %61 : s64i [nsw]
                            store %64, %62, align 8
                            yield
                        } while {
                            %57 = load %36 : s32i, align 4
                            %58 = dec %57 : s32i [nsw]
                            store %58, %36, align 4
                            %59 = cast(int_to_bool) %58 : bool
                            condition %59
                        }
                        yield
                    }
                    %51 = load %41 : s64i*, align 8
                    %52 = load %51 : s64i, align 8
                    %53 = const 0 : s64i
                    %54 = cmp eq %52, %53 : bool
                    %55 = cast(bool_to_int) %54 : s32i
                    store %55, %38
                    %56 = load %38 : s32i
                    return %56
                }
                case default {
                    %50 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
            }
            yield
        }
        %48 = load %38 : s32i
        return %48
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "v0", align 4
    %2 = alloca s64i, "v1", align 8
    %3 = alloca s64i, "v2", align 8
    %4 = const 0 : s32i
    store %4, %0
    %5 = const 1 : s32i
    store %5, %1, align 4
    %6 = const 0 : s32i
    %7 = const 5 : s32i
    %8 = cast(bitcast) %1 : void*
    %9 = call @doit(%6, %7, %8) : s32i [all]
    %10 = const 1 : s64i
    store %10, %2, align 8
    %11 = const 1 : s32i
    %12 = const 5 : s32i
    %13 = cast(bitcast) %2 : void*
    %14 = call @doit(%11, %12, %13) : s32i [all]
    %15 = const 1 : s64i
    store %15, %3, align 8
    %16 = const 2 : s32i
    %17 = const 5 : s32i
    %18 = cast(bitcast) %3 : void*
    %19 = call @doit(%16, %17, %18) : s32i [all]
    scope {
        %31 = load %1 : s32i, align 4
        %32 = const 32 : s32i
        %33 = cmp ne %31, %32 : bool
        if %33 {
            %34 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %27 = load %2 : s64i, align 8
        %28 = const 32 : s64i
        %29 = cmp ne %27, %28 : bool
        if %29 {
            %30 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %23 = load %3 : s64i, align 8
        %24 = const 32 : s64i
        %25 = cmp ne %23, %24 : bool
        if %25 {
            %26 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %20 = get_global @exit : ((s32i) -> void)*
    %21 = const 0 : s32i
    call @exit(%21) [all]
    %22 = load %0 : s32i
    return %22
}
