clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__991023_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/991023-1.c" (c, x86_64-unknown-linux-gnu)
global blah : s32i = 0 [external, default, align 4, dso_local]

fn foo() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %9 = alloca s32i, "__retval", align 4
    %10 = alloca s32i, "i", align 4
    scope {
        %14 = const 0 : s32i
        store %14, %10, align 4
        for cond: {
            %26 = load %10 : s32i, align 4
            %27 = const 7 : s32i
            %28 = cmp lt %26, %27 : bool
            condition %28
        } step: {
            %15 = load %10 : s32i, align 4
            %16 = inc %15 : s32i [nsw]
            store %16, %10, align 4
            yield
        } do {
            scope {
                scope {
                    %17 = load %10 : s32i, align 4
                    %18 = const 7 : s32i
                    %19 = const 1 : s32i
                    %20 = sub %18, %19 : s32i [nsw]
                    %21 = cmp eq %17, %20 : bool
                    if %21 {
                        %24 = const 4044 : s32i
                        %25 = get_global @blah : s32i*
                        store %24, %25, align 4
                        yield
                    } else {
                        %22 = const 4078 : s32i
                        %23 = get_global @blah : s32i*
                        store %22, %23, align 4
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %11 = get_global @blah : s32i*
    %12 = load %11 : s32i, align 4
    store %12, %9
    %13 = load %9 : s32i
    return %13
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = call @foo() : s32i [all]
        %6 = const 4044 : s32i
        %7 = cmp ne %5, %6 : bool
        if %7 {
            %8 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
