clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__991112_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/991112-1.c" (c, x86_64-unknown-linux-gnu)
fn rl_show_char(%arg2: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %31 = alloca s32i, "c", align 4
        %32 = alloca s32i, "__retval", align 4
        store %arg2, %31
        %33 = const 0 : s32i
        store %33, %32
        %34 = load %32 : s32i
        return %34
}
fn isprint(%arg0: s32i) -> s32i [external, c, pure, nothrow];
fn rl_character_len(%arg0: s32i, %arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %20 = alloca s32i, "c", align 4
        %21 = alloca s32i, "pos", align 4
        %22 = alloca s32i, "__retval", align 4
        store %arg0, %20
        store %arg1, %21
        %23 = get_global @isprint : (s32i) -> s32i*
        %24 = load %20 : s32i, align 4
        %25 = call @isprint(%24) : s32i [pure]
        %26 = cast(int_to_bool) %25 : bool
        %27 = const 1 : s32i
        %28 = const 2 : s32i
        select
        store %29, %22
        %30 = load %22 : s32i
        return %30
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca (s32i, s32i) -> s32i*, "x", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @rl_character_len : (s32i, s32i) -> s32i*
        store %3, %1, align 8
        scope {
                %13 = load %1 : (s32i, s32i) -> s32i*, align 8
                %14 = const 97 : s32i
                %15 = const 1 : s32i
                %16 = call (%14, %15) : s32i [all]
                %17 = const 1 : s32i
                cmp
                if %18 {
                        %19 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %6 = load %1 : (s32i, s32i) -> s32i*, align 8
                %7 = const 2 : s32i
                %8 = const 1 : s32i
                %9 = call (%7, %8) : s32i [all]
                %10 = const 2 : s32i
                cmp
                if %11 {
                        %12 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %4 = const 0 : s32i
        store %4, %0
        %5 = load %0 : s32i
        return %5
}
