clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__991118_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/991118-1.c" (c, x86_64-unknown-linux-gnu)
global tmp : rec_tmp = ConstRecord { ty: Named("rec_tmp"), members: Array([CirInt { ty: Named("u64i"), value: "1311768467463786787" }]) } [external, default, align 8, dso_local]
global tmp2 : rec_tmp2 = ConstRecord { ty: Named("rec_tmp2"), members: Array([CirInt { ty: Named("u64i"), value: "1310867747538316237" }]) } [external, default, align 8, dso_local]
global tmp3 : rec_tmp3 = ConstRecord { ty: Named("rec_tmp3"), members: Array([CirInt { ty: Named("u64i"), value: "1152912708513825059" }]) } [external, default, align 8, dso_local]
global tmp4 : rec_tmp4 = ConstRecord { ty: Named("rec_tmp4"), members: Array([CirInt { ty: Named("u64i"), value: "2621657928788082688" }]) } [external, default, align 8, dso_local]

fn sub(%arg3: u64i) -> u64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: u64i):
        %152 = alloca rec_tmp, "coerce", align 8
        %153 = alloca u64i, "coerce", align 8
        store %arg3, %153
        %154 = cast(bitcast) %153 : rec_tmp*
        %155 = load %154 : rec_tmp
        %156 = alloca rec_tmp, "tmp", align 8
        %157 = alloca rec_tmp, "__retval", align 8
        store %155, %156
        %158 = const 2381903268435576 : s64i
        get_member
        get_bitfield
        xor
        set_bitfield
        copy
        %163 = load %157 : rec_tmp
        store %163, %152
        %164 = cast(bitcast) %152 : u64i*
        %165 = load %164 : u64i
        return %165
}
fn sub2(%arg2: u64i) -> u64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: u64i):
        %138 = alloca rec_tmp2, "coerce", align 8
        %139 = alloca u64i, "coerce", align 8
        store %arg2, %139
        %140 = cast(bitcast) %139 : rec_tmp2*
        %141 = load %140 : rec_tmp2
        %142 = alloca rec_tmp2, "tmp2", align 8
        %143 = alloca rec_tmp2, "__retval", align 8
        store %141, %142
        %144 = const 2381903268435576 : s64i
        get_member
        get_bitfield
        xor
        set_bitfield
        copy
        %149 = load %143 : rec_tmp2
        store %149, %138
        %150 = cast(bitcast) %138 : u64i*
        %151 = load %150 : u64i
        return %151
}
fn sub3(%arg1: u64i) -> u64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: u64i):
        %124 = alloca rec_tmp3, "coerce", align 8
        %125 = alloca u64i, "coerce", align 8
        store %arg1, %125
        %126 = cast(bitcast) %125 : rec_tmp3*
        %127 = load %126 : rec_tmp3
        %128 = alloca rec_tmp3, "tmp3", align 8
        %129 = alloca rec_tmp3, "__retval", align 8
        store %127, %128
        %130 = const 6885502895806072 : s64i
        get_member
        get_bitfield
        xor
        set_bitfield
        copy
        %135 = load %129 : rec_tmp3
        store %135, %124
        %136 = cast(bitcast) %124 : u64i*
        %137 = load %136 : u64i
        return %137
}
fn sub4(%arg0: u64i) -> u64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u64i):
        %110 = alloca rec_tmp4, "coerce", align 8
        %111 = alloca u64i, "coerce", align 8
        store %arg0, %111
        %112 = cast(bitcast) %111 : rec_tmp4*
        %113 = load %112 : rec_tmp4
        %114 = alloca rec_tmp4, "tmp4", align 8
        %115 = alloca rec_tmp4, "__retval", align 8
        store %113, %114
        %116 = const 6885502895806072 : s64i
        get_member
        get_bitfield
        xor
        set_bitfield
        copy
        %121 = load %115 : rec_tmp4
        store %121, %110
        %122 = cast(bitcast) %110 : u64i*
        %123 = load %122 : u64i
        return %123
}
fn exit(%arg0: s32i) -> void [external, c];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca u64i, "coerce", align 8
        %1 = alloca rec_tmp4, "coerce", align 8
        %2 = alloca u64i, "coerce", align 8
        %3 = alloca rec_tmp3, "coerce", align 8
        %4 = alloca u64i, "coerce", align 8
        %5 = alloca rec_tmp2, "coerce", align 8
        %6 = alloca u64i, "coerce", align 8
        %7 = alloca rec_tmp, "coerce", align 8
        %8 = alloca s32i, "__retval", align 4
        %9 = const 0 : s32i
        store %9, %8
        scope {
                %105 = const 8 : u64i
                %106 = const 8 : u64i
                cmp
                if %107 {
                        %108 = get_global @exit : (s32i) -> void*
                        %109 = const 0 : s32i
                        call @exit(%109) [all]
                        yield
                }
                yield
        }
        %10 = get_global @tmp : rec_tmp*
        %11 = get_global @tmp : rec_tmp*
        %12 = load %11 : rec_tmp, align 8
        store %12, %7
        %13 = cast(bitcast) %7 : u64i*
        %14 = load %13 : u64i
        %15 = call @sub(%14) : u64i [all]
        store %15, %6
        %16 = cast(bitcast) %6 : rec_tmp*
        %17 = load %16 : rec_tmp
        store %17, %10, align 8
        %18 = get_global @tmp2 : rec_tmp2*
        %19 = get_global @tmp2 : rec_tmp2*
        %20 = load %19 : rec_tmp2, align 8
        store %20, %5
        %21 = cast(bitcast) %5 : u64i*
        %22 = load %21 : u64i
        %23 = call @sub2(%22) : u64i [all]
        store %23, %4
        %24 = cast(bitcast) %4 : rec_tmp2*
        %25 = load %24 : rec_tmp2
        store %25, %18, align 8
        scope {
                %90 = get_global @tmp : rec_tmp*
                get_member
                get_bitfield
                %93 = cast(integral) %92 : s32i
                %94 = const 291 : s32i
                cmp
                %96 = ternary %95 ? { : bool
                        %104 = const true : bool
                        yield %104
                } : {
                        %98 = get_global @tmp : rec_tmp*
                        get_member
                        get_bitfield
                        %101 = cast(integral) %100 : u64i
                        %102 = const 18444867282350767541 : u64i
                        cmp
                        yield %103
                }
                if %96 {
                        %97 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %75 = get_global @tmp2 : rec_tmp2*
                get_member
                get_bitfield
                %78 = cast(integral) %77 : s32i
                %79 = const 291 : s32i
                cmp
                %81 = ternary %80 ? { : bool
                        %89 = const true : bool
                        yield %89
                } : {
                        %83 = get_global @tmp2 : rec_tmp2*
                        get_member
                        get_bitfield
                        %86 = cast(integral) %85 : u64i
                        %87 = const 18444867282350767541 : u64i
                        cmp
                        yield %88
                }
                if %81 {
                        %82 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %26 = get_global @tmp3 : rec_tmp3*
        %27 = get_global @tmp3 : rec_tmp3*
        %28 = load %27 : rec_tmp3, align 8
        store %28, %3
        %29 = cast(bitcast) %3 : u64i*
        %30 = load %29 : u64i
        %31 = call @sub3(%30) : u64i [all]
        store %31, %2
        %32 = cast(bitcast) %2 : rec_tmp3*
        %33 = load %32 : rec_tmp3
        store %33, %26, align 8
        %34 = get_global @tmp4 : rec_tmp4*
        %35 = get_global @tmp4 : rec_tmp4*
        %36 = load %35 : rec_tmp4, align 8
        store %36, %1
        %37 = cast(bitcast) %1 : u64i*
        %38 = load %37 : u64i
        %39 = call @sub4(%38) : u64i [all]
        store %39, %0
        %40 = cast(bitcast) %0 : rec_tmp4*
        %41 = load %40 : rec_tmp4
        store %41, %34, align 8
        scope {
                %60 = get_global @tmp3 : rec_tmp3*
                get_member
                get_bitfield
                %63 = cast(integral) %62 : s32i
                %64 = const 291 : s32i
                cmp
                %66 = ternary %65 ? { : bool
                        %74 = const true : bool
                        yield %74
                } : {
                        %68 = get_global @tmp3 : rec_tmp3*
                        get_member
                        get_bitfield
                        %71 = cast(integral) %70 : u64i
                        %72 = const 18444925116710409848 : u64i
                        cmp
                        yield %73
                }
                if %66 {
                        %67 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %45 = get_global @tmp4 : rec_tmp4*
                get_member
                get_bitfield
                %48 = cast(integral) %47 : s32i
                %49 = const 291 : s32i
                cmp
                %51 = ternary %50 ? { : bool
                        %59 = const true : bool
                        yield %59
                } : {
                        %53 = get_global @tmp4 : rec_tmp4*
                        get_member
                        get_bitfield
                        %56 = cast(integral) %55 : u64i
                        %57 = const 18444925116710409848 : u64i
                        cmp
                        yield %58
                }
                if %51 {
                        %52 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %42 = get_global @exit : (s32i) -> void*
        %43 = const 0 : s32i
        call @exit(%43) [all]
        %44 = load %8 : s32i
        return %44
}
